--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
 	l0,0c11.4-12.5,19.1-27.8,22.2-42.8C109.1,48.2,107.6,33.2,100.5,21.4z M61.4,69.7c-12.7,0-23-10.3-23-23s10.3-23,23-23
 	s23,10.3,23,23S74.1,69.7,61.4,69.7z"></path></svg></span>&nbsp;Location 
                           </h5>
-                          <p class="u-align-left u-text u-text-5">121 Rock Sreet, 21 Avenue, New York, NY 92103-9000</p>
+                          <p class="u-align-left u-text u-text-5">Abalos street Aguinaldo,Cordon,Isabela Philippines</p>
                         </div>
                       </div>
                       <div class="u-align-left u-container-align-left u-container-style u-list-item u-repeater-item u-shape-rectangle">
